fix: modal overflow

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -14,6 +14,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   position: fixed;
+  overflow: auto;
+}
+
+body.darkBackground {
+  overflow-y: hidden;
 }
 
 .modal {
